Adding support for default region.
Implements: blueprint powershell-cli-compat

Change-Id: I85e2c36a4a69e5718f3a7cedaa0c66bc8e0a7b77

--- a/Openstack/Openstack.Test/Openstack.Test.csproj
+++ b/Openstack/Openstack.Test/Openstack.Test.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Identity\OpenstackServiceCatalogPayloadConverterTests.cs" />
     <Compile Include="Identity\OpenstackServiceCatalogTests.cs" />
     <Compile Include="Identity\IdentityServiceClientDefinitionTests.cs" />
+    <Compile Include="Identity\OpenstackRegionResolverTests.cs" />
     <Compile Include="ServiceLocation\ServiceLocationAssemblyScannerTests.cs" />
     <Compile Include="ServiceLocation\ServiceLocatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="OpenstackClientManagerTests.cs" />
     <Compile Include="OpenstackServiceClientManagerTests.cs" />
     <Compile Include="Storage\StorageServiceClientDefinitionTests.cs" />
+    <Compile Include="TestOpenstackRegionResolver.cs" />
     <Compile Include="TestOpenstackServiceEndpointResolver.cs" />
     <Compile Include="ObjectExtentionsTests.cs" />
     <Compile Include="OpenstackClientTests.cs" />
