--- a/Openstack/Openstack/Openstack.csproj
+++ b/Openstack/Openstack/Openstack.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Identity\IdentityServiceClientDefinition.cs" />
+    <Compile Include="Identity\IOpenstackRegionResolver.cs" />
+    <Compile Include="Identity\OpenstackRegionResolver.cs" />
     <Compile Include="IOpenstackServiceClientDefinition.cs" />
     <Compile Include="OpenstackClient.cs" />
     <Compile Include="OpenstackClientManager.cs" />
