--- a/Openstack/Openstack.Common/Openstack.Common.csproj
+++ b/Openstack/Openstack.Common/Openstack.Common.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Http\IOpenStackAccessToken.cs" />
     <Compile Include="ObjectExtentions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="ServiceLocation\AssemblyNameComparer.cs" />
     <Compile Include="ServiceLocation\IServiceLocationAssemblyScanner.cs" />
     <Compile Include="ServiceLocation\IServiceLocationManager.cs" />
