--- a/Openstack/Openstack.Test/Openstack.Test.csproj
+++ b/Openstack/Openstack.Test/Openstack.Test.csproj
@@ -75,6 +75,9 @@
     <Compile Include="Identity\OpenstackRegionResolverTests.cs" />
     <Compile Include="ServiceLocation\ServiceLocationAssemblyScannerTests.cs" />
     <Compile Include="ServiceLocation\ServiceLocatorTests.cs" />
+    <Compile Include="..\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage\StorageAccountPayloadConverterTests.cs" />
     <Compile Include="Storage\StorageContainerPayloadConverterTests.cs" />
