--- a/Openstack/Openstack/Openstack.csproj
+++ b/Openstack/Openstack/Openstack.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Identity\IdentityServiceClientDefinition.cs" />
     <Compile Include="Identity\IOpenstackRegionResolver.cs" />
     <Compile Include="Identity\OpenstackRegionResolver.cs" />
