Adding StorageFolder poco object, and support for folders at the container level.
Implements: blueprint storage-folder-support
Change-Id: I8cf14854c3eabf83c385b6fb780853defd6d6842

--- a/Openstack/Openstack.Test/Openstack.Test.csproj
+++ b/Openstack/Openstack.Test/Openstack.Test.csproj
@@ -92,6 +92,8 @@
     <Compile Include="OpenstackClientManagerTests.cs" />
     <Compile Include="OpenstackServiceClientManagerTests.cs" />
     <Compile Include="Storage\StorageServiceClientDefinitionTests.cs" />
+    <Compile Include="Storage\StorageFolderTests.cs" />
+    <Compile Include="Storage\StorageFolderPayloadConverterTests.cs" />
     <Compile Include="TestOpenstackRegionResolver.cs" />
     <Compile Include="TestOpenstackServiceEndpointResolver.cs" />
     <Compile Include="ObjectExtentionsTests.cs" />
