Adding support for creating, getting and deleting folders via the storage client
Implements: blueprint storage-folder-support

Change-Id: Ie666b995cfb3dcf45dcf684908c9f0e455596d06

--- a/Openstack/Openstack/Openstack.csproj
+++ b/Openstack/Openstack/Openstack.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Identity\OpenstackServiceEndpointPayloadConverter.cs" />
     <Compile Include="Identity\OpenstackServiceEndpointResolver.cs" />
     <Compile Include="ServiceRegistrar.cs" />
+    <Compile Include="Storage\FolderNameValidator.cs" />
     <Compile Include="Storage\ContainerNameValidator.cs" />
     <Compile Include="Storage\IStorageAccountPayloadConverter.cs" />
     <Compile Include="Storage\IStorageFolderPayloadConverter.cs" />
