--- a/Openstack/Openstack/Openstack.csproj
+++ b/Openstack/Openstack/Openstack.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Identity\OpenstackServiceEndpointPayloadConverter.cs" />
     <Compile Include="Identity\OpenstackServiceEndpointResolver.cs" />
     <Compile Include="ServiceRegistrar.cs" />
+    <Compile Include="Storage\DynamicLargeObjectManifest.cs" />
     <Compile Include="Storage\FolderNameValidator.cs" />
     <Compile Include="Storage\ContainerNameValidator.cs" />
     <Compile Include="Storage\IStorageAccountPayloadConverter.cs" />
@@ -99,8 +100,11 @@
     <Compile Include="Storage\IStorageServicePocoClientFactory.cs" />
     <Compile Include="Storage\IStorageServiceRestClient.cs" />
     <Compile Include="Storage\IStorageServiceRestClientFactory.cs" />
+    <Compile Include="Storage\StaticLargeObjectManifest.cs" />
     <Compile Include="Storage\StorageFolder.cs" />
     <Compile Include="Storage\StorageFolderPayloadConverter.cs" />
+    <Compile Include="Storage\StorageItemNameExtractor.cs" />
+    <Compile Include="Storage\StorageManifest.cs" />
     <Compile Include="Storage\StorageServiceClient.cs" />
     <Compile Include="Storage\StorageServiceClientContext.cs" />
     <Compile Include="Storage\StorageServiceClientDefinition.cs" />
