fixing an issue with geting objects in the root folder
Implements: blueprint powershell-cli-compat
Change-Id: I080d5bf0712f729e2eacda997d9669a67490c3cb

--- a/Openstack/Openstack.Test/Openstack.Test.csproj
+++ b/Openstack/Openstack.Test/Openstack.Test.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Storage\StorageServiceClientDefinitionTests.cs" />
     <Compile Include="Storage\StorageFolderTests.cs" />
     <Compile Include="Storage\StorageFolderPayloadConverterTests.cs" />
+    <Compile Include="Storage\StorageItemTests.cs" />
     <Compile Include="TestOpenstackRegionResolver.cs" />
     <Compile Include="TestOpenstackServiceEndpointResolver.cs" />
     <Compile Include="ObjectExtentionsTests.cs" />
