--- a/OpenStack/OpenStack/packages.config
+++ b/OpenStack/OpenStack/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="4.5.7" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.7" targetFramework="portable-net45+wp80+win" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable-net45+wp80+win" />
+  <package id="Microsoft.Net.Http" version="2.2.19" targetFramework="portable-net45+wp80+win" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="portable-net45+wp80+win" />
 </packages>
