--- a/OpenStack/Examples/SimpleStorageExample/SimpleStorageExample.csproj
+++ b/OpenStack/Examples/SimpleStorageExample/SimpleStorageExample.csproj
@@ -35,11 +35,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\Bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OpenStack">
+    <Reference Include="OpenStack, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Bin\Debug\OpenStack.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenStack.Common">
-      <HintPath>..\..\Bin\Debug\OpenStack.Common.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
