--- a/OpenStack/OpenStack/OpenStack.csproj
+++ b/OpenStack/OpenStack/OpenStack.csproj
@@ -95,9 +95,13 @@
     <Compile Include="IOpenStackServiceClientDefinition.cs" />
     <Compile Include="IOpenStackServiceClientManager.cs" />
     <Compile Include="OpenStackClient.cs" />
+    <Compile Include="OpenStackClientFactory.cs" />
     <Compile Include="OpenStackClientManager.cs" />
     <Compile Include="OpenStackServiceClientManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\AssemblyVersionInfo.cs">
+      <Link>Properties\AssemblyVersionInfo.cs</Link>
+    </Compile>
     <Compile Include="ServiceRegistrar.cs" />
     <Compile Include="Storage\ContainerNameValidator.cs" />
     <Compile Include="Storage\DynamicLargeObjectManifest.cs" />
@@ -123,7 +127,6 @@
     <Compile Include="Storage\StorageFolder.cs" />
     <Compile Include="Storage\StorageFolderPayloadConverter.cs" />
     <Compile Include="Storage\StorageItem.cs" />
-    <Compile Include="Storage\StorageItemNameExtractor.cs" />
     <Compile Include="Storage\StorageManifest.cs" />
     <Compile Include="Storage\StorageObject.cs" />
     <Compile Include="Storage\StorageObjectPayloadConverter.cs" />
