Adding example code to show how to build a new service client from the ground up. Updated the .gitignore file to do a better job of ignoring bin,obj, and package folders.
Partially implements blueprint initial-docs
Change-Id: Ia5225027f5ad2972facabbbe5458b814ef09b6be

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,8 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/Openstack/Openstack/obj
-/Openstack/Openstack.Common/obj
-/Openstack/Openstack.Test/obj
-/Openstack/Bin
 *.user
 *.suo
-/Openstack/packages
-/Openstack/Openstack/obj
-/Openstack/Openstack.Common/obj
-/Openstack/Openstack.Test/obj
+packages/
+obj/
+bin/
