Spliting the solution up into two projects. One project for 4.0 and another for 4.5. Added retargeting code so the 4.0 project can use async await Added extention methods to work around differences in reflection and async support. Changed the output folders for each project, to relfect the .NET framework version they are being built with. Updated the unit test project to build take a reference to the 4.5/PCL assembly. Updated the example projects to take a dependency on the 4.5/PCL assembly.
Implements blueprint support-net35
Change-Id: Iefb776912cd8257b38a9aaf97cc7bb1b347b8892

--- a/OpenStack/OpenStack.Test/OpenStack.Test.csproj
+++ b/OpenStack/OpenStack.Test/OpenStack.Test.csproj
@@ -21,7 +21,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\bin\Debug\</OutputPath>
+    <OutputPath>..\bin\net45\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -29,7 +29,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\bin\Release\</OutputPath>
+    <OutputPath>..\bin\net45\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -103,13 +103,13 @@
     <Compile Include="OpenStackClientTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OpenStack\OpenStack.csproj">
-      <Project>{5660f8aa-14d5-4b3b-ada0-f79a286ef483}</Project>
-      <Name>OpenStack</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\OpenStack45-PCL\OpenStack45-PCL.csproj">
+      <Project>{5660f8aa-14d5-4b3b-ada0-f79a286ef483}</Project>
+      <Name>OpenStack45-PCL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
