--- a/OpenStack/Examples/CustomServiceClientExample/CustomServiceClientExample.csproj
+++ b/OpenStack/Examples/CustomServiceClientExample/CustomServiceClientExample.csproj
@@ -35,8 +35,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\Bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OpenStack">
-      <HintPath>..\..\Bin\Debug\OpenStack.dll</HintPath>
+    <Reference Include="OpenStack, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Bin\net45\Debug\OpenStack.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
