--- a/OpenStack/Examples/SimpleStorageExample/SimpleStorageExample.csproj
+++ b/OpenStack/Examples/SimpleStorageExample/SimpleStorageExample.csproj
@@ -35,9 +35,9 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\Bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OpenStack, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="OpenStack, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Bin\Debug\OpenStack.dll</HintPath>
+      <HintPath>..\..\Bin\net45\Debug\OpenStack.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
