--- a/OpenStack/OpenStack/OpenStack40.csproj
+++ b/OpenStack/OpenStack/OpenStack40.csproj
@@ -2,24 +2,21 @@
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5660F8AA-14D5-4B3B-ADA0-F79A286EF483}</ProjectGuid>
+    <ProjectGuid>{E9F05CCA-2748-4785-9F72-5D3F8893BC28}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OpenStack</RootNamespace>
     <AssemblyName>OpenStack</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\Bin\Debug\</OutputPath>
+    <OutputPath>..\Bin\net40\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,15 +24,11 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\Bin\net40\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <None Include="packages.config" />
-  </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Http\DisposableClass.cs" />
     <Compile Include="Common\Http\HttpAbstractionClient.cs" />
@@ -47,6 +40,7 @@
     <Compile Include="Common\Http\IHttpHeadersAbstraction.cs" />
     <Compile Include="Common\Http\IHttpResponseAbstraction.cs" />
     <Compile Include="Common\ObjectExtentions.cs" />
+    <Compile Include="Common\ReflectionExtentions.cs" />
     <Compile Include="Common\ServiceLocation\IServiceLocationAssemblyScanner.cs" />
     <Compile Include="Common\ServiceLocation\IServiceLocationManager.cs" />
     <Compile Include="Common\ServiceLocation\IServiceLocationOverrideManager.cs" />
@@ -59,6 +53,7 @@
     <Compile Include="Common\ServiceLocation\ServiceLocationManager.cs" />
     <Compile Include="Common\ServiceLocation\ServiceLocationRegistrarFactory.cs" />
     <Compile Include="Common\ServiceLocation\ServiceLocator.cs" />
+    <Compile Include="Common\StreamExtentions.cs" />
     <Compile Include="Identity\AccessTokenPayloadConverter.cs" />
     <Compile Include="Identity\IAccessTokenPayloadConverter.cs" />
     <Compile Include="Identity\ICredential.cs" />
@@ -135,27 +130,32 @@
     <Compile Include="Storage\StorageServicePocoClientFactory.cs" />
     <Compile Include="Storage\StorageServiceRestClient.cs" />
     <Compile Include="Storage\StorageServiceRestClientFactory.cs" />
+    <Compile Include="Threading\System.Runtime.CompilerServices\AsyncTaskMethodBuilder.cs" />
+    <Compile Include="Threading\System.Runtime.CompilerServices\AsyncTaskMethodBuilderOfT.cs" />
+    <Compile Include="Threading\System.Runtime.CompilerServices\AsyncVoidMethodBuilder.cs" />
+    <Compile Include="Threading\System.Runtime.CompilerServices\IAsyncStateMachine.cs" />
+    <Compile Include="Threading\System.Runtime.CompilerServices\ICriticalNotifyCompletion.cs" />
+    <Compile Include="Threading\System.Runtime.CompilerServices\INotifyCompletion.cs" />
+    <Compile Include="Threading\System.Threading.Tasks\TaskAwaiter.cs" />
+    <Compile Include="Threading\System.Threading.Tasks\TaskAwaiterOfT.cs" />
+    <Compile Include="Threading\System.Threading.Tasks\TaskCoreExtensions.cs" />
+    <Compile Include="Threading\System.Threading.Tasks\TaskEx.cs" />
+    <Compile Include="Threading\System.Threading.Tasks\TaskSchedularHelper.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.2\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="System.Net.Http">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.19\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http.Extensions">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.19\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Net.Http.Primitives">
-      <HintPath>..\packages\Microsoft.Net.Http.2.2.19\lib\portable-net40+sl4+win8+wp71+wpa81\System.Net.Http.Primitives.dll</HintPath>
-    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
-  <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
-    <Error Condition="!Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=317567." HelpKeyword="BCLBUILD2001" />
-    <Error Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
-  </Target>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
