Fixes a bug where user could not connect to devstack using the sdk example.
Added the ability to specify a service name when creating a service client.
Moved the default service name into the service definitions for both Identity and Storage
Modified the region resolution code to include a fall back when the given service name cannot be found
Updated unit tests and examples.

Closes-Bug: #1323260
Change-Id: Ifefd12ec783429f7a9c0f80c22bbd9aa6985df55

--- a/OpenStack/Examples/SimpleStorageExample/SimpleStorageExample.csproj
+++ b/OpenStack/Examples/SimpleStorageExample/SimpleStorageExample.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\Bin\Debug\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\Bin\net45\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="OpenStack, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
