Adding support for listing, getting and deleting images
Partially implements blueprint support-compute-api
Change-Id: I2c869d713240c75cbaf7fbd7db1511e5e56c15d1

--- a/OpenStack/OpenStack.Test/OpenStack.Test.csproj
+++ b/OpenStack/OpenStack.Test/OpenStack.Test.csproj
@@ -57,6 +57,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Compute\ComputeImagePayloadConverterTests.cs" />
     <Compile Include="Compute\ComputeFlavorPayloadConverterTests.cs" />
     <Compile Include="Compute\ComputeRestSimulator.cs" />
     <Compile Include="Compute\ComputeServiceRestClientTests.cs" />
