Adding support for creating, updating and deleting metadata on images and servers. Updating. and adding unit tests. Changing "ListImages" and "ListFlavors" to be more consistent with the GetX sematic.
Partially implements blueprint support-compute-api
Change-Id: Ia31599a20cb1fa42595fc92b504c00c936976c21

--- a/OpenStack/OpenStack.Test/OpenStack.Test.csproj
+++ b/OpenStack/OpenStack.Test/OpenStack.Test.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Compute\ComputeImagePayloadConverterTests.cs" />
     <Compile Include="Compute\ComputeFlavorPayloadConverterTests.cs" />
+    <Compile Include="Compute\ComputeItemMetadataPayloadConverterTests.cs" />
     <Compile Include="Compute\ComputeRestSimulator.cs" />
     <Compile Include="Compute\ComputeServiceRestClientTests.cs" />
     <Compile Include="Compute\ComputeServicePocoClientTests.cs" />
