--- a/OpenStack/OpenStack45-PCL/OpenStack45-PCL.csproj
+++ b/OpenStack/OpenStack45-PCL/OpenStack45-PCL.csproj
@@ -121,6 +121,12 @@
     <Compile Include="..\OpenStack\Compute\ComputeItem.cs">
       <Link>Compute\ComputeItem.cs</Link>
     </Compile>
+    <Compile Include="..\OpenStack\Compute\ComputeItemMetadataPayloadConverter.cs">
+      <Link>Compute\ComputeItemMetadataPayloadConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenStack\Compute\ComputeServer.cs">
+      <Link>Compute\ComputeServer.cs</Link>
+    </Compile>
     <Compile Include="..\OpenStack\Compute\ComputeServiceClient.cs">
       <Link>Compute\ComputeServiceClient.cs</Link>
     </Compile>
@@ -145,6 +151,9 @@
     <Compile Include="..\OpenStack\Compute\IComputeImagePayloadConverter.cs">
       <Link>Compute\IComputeImagePayloadConverter.cs</Link>
     </Compile>
+    <Compile Include="..\OpenStack\Compute\IComputeItemMetadataPayloadConverter.cs">
+      <Link>Compute\IComputeItemMetadataPayloadConverter.cs</Link>
+    </Compile>
     <Compile Include="..\OpenStack\Compute\IComputeServiceClient.cs">
       <Link>Compute\IComputeServiceClient.cs</Link>
     </Compile>
@@ -159,6 +168,9 @@
     </Compile>
     <Compile Include="..\OpenStack\Compute\IComputeServiceRestClientFactory.cs">
       <Link>Compute\IComputeServiceRestClientFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\OpenStack\Compute\MetadataComputeItem.cs">
+      <Link>Compute\MetadataComputeItem.cs</Link>
     </Compile>
     <Compile Include="..\OpenStack\Identity\AccessTokenPayloadConverter.cs">
       <Link>Identity\AccessTokenPayloadConverter.cs</Link>
